--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <h1>Hello PWA.</h1>
   <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
   <a href="p.html">p.html</a>
+  <a href="c.html">c.html</a>
 </body>
 </html>
