--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
   <a href="p.html">p.html</a>
   <a href="c.html">c.html</a>
+  <a href="db.html">db.html</a>
 </body>
 </html>
